force-app/main/default/objects/addOn__c/addOn__c.object-meta.xml
<CustomObject>
    <label>addOn</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>addOn id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>addOns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>