force-app/main/default/objects/addOn__c/fields/addOn_type__c.field-meta.xml
<CustomField>
    <fullName>addOn_type__c</fullName>
    <label>addOn type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>