force-app/main/default/objects/addOn__c/fields/customer_subscription__c.field-meta.xml
<CustomField>
    <fullName>customer_subscription__c</fullName>
    <label>customer subscription</label>
    <referenceTo>customer_subscription__c</referenceTo>
    <relationshipLabel>addOns</relationshipLabel>
    <relationshipName>addOns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>