force-app/main/default/objects/addOn__c/fields/praticeDevOps__c.field-meta.xml
<CustomField>
    <fullName>praticeDevOps__c</fullName>
    <label>praticeDevOps</label>
    <length>10</length>
    <type>Text</type>
</CustomField>