force-app/main/default/objects/addOn__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <defaultValue>&quot;Screen&quot;</defaultValue>
    <label>Screen</label>
    <length>6</length>
    <type>Text</type>
</CustomField>