force-app/main/default/objects/addOn__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <defaultValue>&quot;Storage&quot;</defaultValue>
    <label>Storage</label>
    <length>7</length>
    <type>Text</type>
</CustomField>