force-app/main/default/objects/addOn__c/fields/USER__c.field-meta.xml
<CustomField>
    <fullName>USER__c</fullName>
    <defaultValue>&quot;User&quot;</defaultValue>
    <label>User</label>
    <length>4</length>
    <type>Text</type>
</CustomField>