force-app/main/default/objects/addOn__c/recordTypes/Screen_RT.recordType-meta.xml
<RecordType>
    <fullName>Screen_RT</fullName>
    <active>true</active>
    <label>Screen RT</label>
</RecordType>