force-app/main/default/objects/addOn__c/recordTypes/Storage_RT.recordType-meta.xml
<RecordType>
    <fullName>Storage_RT</fullName>
    <active>true</active>
    <label>Storage RT</label>
</RecordType>