force-app/main/default/objects/addOn__c/recordTypes/User_RT.recordType-meta.xml
<RecordType>
    <fullName>User_RT</fullName>
    <active>true</active>
    <label>User RT</label>
</RecordType>